--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "reportlab",
 ]
 
+[project.scripts]
+eassistant = "eassistant.cli:app"
+
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
