--- a/project.todo.json
+++ b/project.todo.json
@@ -238,7 +238,9 @@
           "dependencies": [
             "M1.1"
           ],
-          "definition_of_done": "The `GraphState` in `eassistant/graph/state.py` is updated to include the new `conversation_summary` field."
+          "definition_of_done": "The `GraphState` in `eassistant/graph/state.py` is updated to include the new `conversation_summary` field.",
+          "status": "done",
+          "completed_at": "2025-09-29T12:29:00.551Z"
         },
         {
           "id": "M2.9",
