--- a/project.todo.json
+++ b/project.todo.json
@@ -248,7 +248,9 @@
           "dependencies": [
             "M1.1"
           ],
-          "definition_of_done": "A new `handle_idle_chat` node is created in `eassistant/graph/nodes.py` that provides a simple, conversational response."
+          "definition_of_done": "A new `handle_idle_chat` node is created in `eassistant/graph/nodes.py` that provides a simple, conversational response.",
+          "status": "done",
+          "completed_at": "2025-09-29T12:32:24.524Z"
         },
         {
           "id": "M2.10",
