--- a/project.todo.json
+++ b/project.todo.json
@@ -344,7 +344,8 @@
             "M2.9"
           ],
           "definition_of_done": "Key business logic in all nodes and services has corresponding pytest unit tests.",
-          "status": "pending"
+          "status": "done",
+          "completed_at": "2025-09-29T12:57:52.569Z"
         },
         {
           "id": "M3.6",
