--- a/project.todo.json
+++ b/project.todo.json
@@ -424,7 +424,8 @@
             "M2.11"
           ],
           "definition_of_done": "A 'save' command is added to the CLI. When invoked, it uses the Storage service to save the latest draft to a local file.",
-          "status": "pending"
+          "status": "done",
+          "completed_at": "2025-09-29T13:20:14.631Z"
         },
         {
           "id": "M4.6",
