--- a/project.todo.json
+++ b/project.todo.json
@@ -463,7 +463,8 @@
             "M3.7"
           ],
           "definition_of_done": "`pytest --cov` reports coverage of 95% or higher.",
-          "status": "pending"
+          "status": "done",
+          "completed_at": "2025-09-29T13:43:04.678Z"
         },
         {
           "id": "M5.2",
