--- a/project.todo.json
+++ b/project.todo.json
@@ -545,7 +545,8 @@
             "M7.1"
           ],
           "definition_of_done": "The GraphState class in `eassistant/graph/state.py` is updated with a new optional `save_target: str` field. The `route_action` node correctly populates this field in the state.",
-          "status": "todo"
+          "status": "done",
+          "completed_at": "2025-09-29T14:45:21.460Z"
         },
         {
           "id": "M7.3",
