--- a/project.todo.json
+++ b/project.todo.json
@@ -556,7 +556,8 @@
             "M7.2"
           ],
           "definition_of_done": "The `StorageService.save()` method is updated to accept an optional `target` parameter. The `save_draft` node is modified to read the `save_target` from the state and pass it to the `StorageService`.",
-          "status": "todo"
+          "status": "done",
+          "completed_at": "2025-09-29T14:52:03.184Z"
         },
         {
           "id": "M7.4",
