--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ dependencies = [
     "reportlab",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "pytest-cov",
+    "pytest-mock",
+    "moto[s3]",
+    "boto3-stubs[s3]",
+]
+
 [project.scripts]
 eassistant = "eassistant.cli:app"
 
@@ -42,7 +51,8 @@ files = [
 ]
 exclude = [
     "\\.venv",
-    "src/eassistant/notebooks"
+    "src/eassistant/notebooks",
+    "build"
 ]
 follow_imports = "skip"
 # We enable strict checking for specific modules that are fully typed
