--- a/services/ui/cloudbuild.yaml
+++ b/services/ui/cloudbuild.yaml
@@ -1,4 +1,14 @@
 steps:
+  # Install dependencies
+  - name: 'python:3.9-slim'
+    entrypoint: 'pip'
+    args: ['install', '-r', 'requirements.txt', '--user']
+
+  # Run tests
+  - name: 'python:3.9-slim'
+    entrypoint: 'python'
+    args: ['manage.py', 'test']
+
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/eassistant-ui:$COMMIT_SHA', '.']
@@ -26,6 +36,17 @@ steps:
       # Add any other required environment variables here
       # Example for Django SECRET_KEY and API URL
       # - '--set-env-vars=SECRET_KEY=your-secret-key,API_URL=https://your-api-url.a.run.app'
+  # Run Smoke Tests
+  - name: 'python:3.9-slim'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        pip install requests
+        python ../../tests/smoke_test.py
+    env:
+      - 'UI_URL=$_UI_URL'
+      - 'API_URL=$_API_URL'
 
 images:
   - 'gcr.io/$PROJECT_ID/eassistant-ui:$COMMIT_SHA'
