Move variables to .env

--- a/services/ui/.env.example
+++ b/services/ui/.env.example
@@ -1,2 +1,19 @@
-# Django secret key
+# This file is for local development.
+# For production deployments on Google Cloud Run, configure these as environment variables in the service settings.
+
+# A long, random string for Django's cryptographic signing.
+# The default is insecure and should be changed for production.
 DJANGO_SECRET_KEY="django-insecure-k_8mkbeiwqal&suxdvot(-g47&cbo5tf2oz=%=zvw6+k1#5%54"
+
+# Controls Django's debug mode. Set to "False" in production.
+DJANGO_DEBUG="True"
+
+# A comma-separated list of allowed hostnames.
+# For local development, "127.0.0.1,localhost" is sufficient.
+# For production, this must be the full domain of your Cloud Run service.
+DJANGO_ALLOWED_HOSTS="127.0.0.1,localhost"
+
+# The full URL to the backend API service.
+# For local development, this points to the local FastAPI server.
+# For production, this must be the URL of your deployed API service.
+API_URL="http://127.0.0.1:8000/api/v1/chat/"
